--- a/pom.xml
+++ b/pom.xml
@@ -1,32 +1,27 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<?xml version="1.0"?>
+<project
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+>
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>AdventOfCode</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <dependencies>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
-        </dependency>
-			<dependency>
-				<groupId>com.liferay</groupId>
-				<artifactId>com.liferay.source.formatter</artifactId>
-				<version>1.0.1367</version>
-			</dependency>
-    </dependencies>
+	<groupId>org.example</groupId>
+	<artifactId>AdventOfCode</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<dependencies>
+		<dependency>
+			<groupId>com.liferay</groupId>
+			<artifactId>com.liferay.source.formatter</artifactId>
+			<version>1.0.1367</version>
+		</dependency>
+	</dependencies>
 
-    <properties>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
+	<properties>
+		<maven.compiler.source>19</maven.compiler.source>
+		<maven.compiler.target>19</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
 	<build>
 		<pluginManagement>
@@ -37,11 +32,6 @@
 					<version>1.0.1367</version>
 					<configuration>
 						<maxLineLength>160</maxLineLength>
-						<checkNames>false</checkNames>
-						<failOnHasWarning>false</failOnHasWarning>
-						<printErrors>true</printErrors>
-						<baseDir>/Volumes/dev-bp/onboarding-luka/src/main/java/hr/bp/aoc/model/Day.java</baseDir>
-						<fileExtensions>java,xml,md</fileExtensions>
 					</configuration>
 				</plugin>
 			</plugins>
