--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.14.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.liferay</groupId>
+            <artifactId>com.liferay.source.formatter</artifactId>
+            <version>1.0.1367</version>
+        </dependency>
     </dependencies>
 
     <properties>
@@ -41,6 +45,19 @@
                         <force>true</force>
                         <fixFieldComment>false</fixFieldComment>
                         <fixMethodComment>false</fixMethodComment>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>com.liferay</groupId>
+                    <artifactId>com.liferay.source.formatter</artifactId>
+                    <version>1.0.1367</version>
+                    <configuration>
+                        <maxLineLength>160</maxLineLength>
+                        <checkNames>false</checkNames>
+                        <failOnHasWarning>false</failOnHasWarning>
+                        <printErrors>true</printErrors>
+                        <baseDir>/home/user/IdeaProjects/AdventOfCode2</baseDir>
+                        <fileExtensions>java,xml,md</fileExtensions>
                     </configuration>
                 </plugin>
             </plugins>
