--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
             <version>3.14.0</version>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.9</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>com.liferay</groupId>
             <artifactId>com.liferay.source.formatter</artifactId>
             <version>1.0.1367</version>
