--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,16 @@
 			<artifactId>com.liferay.source.formatter</artifactId>
 			<version>1.0.1367</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>2.0.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>2.0.9</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
