--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,14 @@
 apply plugin: 'idea'
 
 apply plugin: 'java'
+
+dependencies {
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.16'
+    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.4.6'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.6'
+
+}
+
+repositories {
+    mavenCentral()
+}
