--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ dependencies {
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.16'
     implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.4.6'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.6'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+
 
 }
 
