--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>core</module>
+        <module>console</module>
     </modules>
 
     <properties>
