--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <logback.version>1.5.12</logback.version>
         <spring.version>6.2.1</spring.version>
         <java.version>21</java.version>
+        <lombok.version>1.18.36</lombok.version>
         <annotation-api.version>3.0.0</annotation-api.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
@@ -43,6 +44,12 @@
                 <version>${annotation-api.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>provided</scope>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
